--- a/examples/compose.yml
+++ b/examples/compose.yml
@@ -1,7 +1,7 @@
 services:
   cloudflare-companion:
-    image: tiredofit/traefik-cloudflare-companion
-    container_name: cloudflare-companion
+    image: domscott/traefik-pihole-companion
+    container_name: pihole-companion
     volumes:
       - ./logs:/logs
       - /var/run/docker.sock:/var/run/docker.sock
@@ -12,13 +12,11 @@ services:
       - LOG_LEVEL=INFO
 
       - TRAEFIK_VERSION=2
-      - CF_EMAIL=email@example.com
-      - CF_TOKEN=fbSx3dk3A3mJ6UukLQ7zRbo63H5UdsGSCqQnTvbJDgyQaTp
-      - RC_TYPE=CNAME
-
-      - TARGET_DOMAIN=host.example.org
+      - PH_URL=email@example.com
+      - PH_TOKEN=fbSx3dk3A3mJ6UukLQ7zRbo63H5UdsGSCqQnTvbJDgyQaTp
+      - TARGET_IP=192.168.1.2
       - DOMAIN1=example.org
-      - DOMAIN1_ZONE_ID=1234567890
+
       #- DOCKER_HOST=tcp://198.51.100.32:2376
       #- DOCKER_CERT_PATH=/docker-certs
       #- DOCKER_TLS_VERIFY=1
